cm4all-workshop (2.0.23) unstable; urgency=low

  * spawn: attach to existing network namespace with NETWORK_NAMESPACE_NAME
  * spawn: allow unshare(), mount(), umount(), pivot_root()
  * migrate: new database migration tool
  * workshop: add column "enabled"

 --   

cm4all-workshop (2.0.22) unstable; urgency=low

  * spawn: run the PID namespace init process as root
  * spawn: tight system call whitelist for init process
  * spawn: forbid fanotify_*, nfsservctl, syslog
  * translation: fix the FORBID_MULTICAST setting
  * translation: add packet FORBID_BIND

 -- Max Kellermann <mk@cm4all.com>  Tue, 01 Aug 2017 10:43:29 -0000

cm4all-workshop (2.0.21) unstable; urgency=low

  * cron: change to home directory

 -- Max Kellermann <mk@cm4all.com>  Mon, 31 Jul 2017 08:34:38 -0000

cm4all-workshop (2.0.20) unstable; urgency=low

  * logger: fix log level
  * workshop: don't strip newlines from "log" column

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Jul 2017 11:41:57 -0000

cm4all-workshop (2.0.19) unstable; urgency=low

  * translation: add packet FORBID_MULTICAST
  * spawn: system call filter errors are fatal if explicitly enabled
  * spawn: apply cgroup namespace again after moving to new cgroup
  * doc: more "cronjobs" table documentation
  * doc: document the "cronresults" table

 -- Max Kellermann <mk@cm4all.com>  Fri, 14 Jul 2017 08:25:32 -0000

cm4all-workshop (2.0.18) unstable; urgency=low

  * translation: add packet CGROUP_NAMESPACE
  * translation: allow underscore in cgroup controller name
  * workshop: ignore jobs with scheduled_time more than 1 year future

 -- Max Kellermann <mk@cm4all.com>  Fri, 07 Jul 2017 12:49:20 -0000

cm4all-workshop (2.0.17) unstable; urgency=low

  * spawn: create STDERR_PATH with mode 0600
  * spawn: fix socket family filter
  * translation: add packets UMASK, STDERR_PATH_JAILED

 -- Max Kellermann <mk@cm4all.com>  Tue, 04 Jul 2017 16:36:07 -0000

cm4all-workshop (2.0.16) unstable; urgency=low
