@@ -4,6 +4,7 @@ cm4all-workshop (2.0.23) unstable; urgency=low
   * spawn: allow unshare(), mount(), umount(), pivot_root()
   * migrate: new database migration tool
   * workshop: add column "enabled"
+  * cron: support month and weekday names
 
  --   
 
